--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "boto3>=1.39.13",
+    "google-cloud-storage>=3.2.0",
+]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.4.1",
+    "pyyaml>=6.0.2",
+]
